[package]
name = "hist_getter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
error-chain = { version = "0.12.4"}
tokio = { version = "1.18.2", features = ["full"] }
chrono = "0"
structopt = { version = "0.3", default-features = false }